; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_util.c_nc_get_soerror.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_util.c_nc_get_soerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_ERROR = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nc_get_soerror(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  store i32 4, i32* %5, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @SOL_SOCKET, align 4
  %8 = load i32, i32* @SO_ERROR, align 4
  %9 = call i32 @getsockopt(i32 %6, i32 %7, i32 %8, i32* %4, i32* %5)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* @errno, align 4
  br label %14

14:                                               ; preds = %12, %1
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @getsockopt(i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
